# Capstone_Design

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mock_llm.py  proxy.py  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py
backend/tests/: conftest.py  test_injection_detector.py  test_masking.py  test_pii_detector.py  test_policy_engine.py  test_proxy_api.py
datasets/: dataset_notes.md  labeling_guide.md  sample_dataset.json  sample_dataset_v2.json  sample_dataset_v2_balanced.json
docs/: demo_scenario.md  evaluation_method.md  logging_policy.md  policy_guide.md  project_direction.md  reason_codes.md  team_roles.md
docs/images/: demo_proxy_block_direct_override.request.json  demo_proxy_block_direct_override.response.json  demo_proxy_boundary_allow.request.json  demo_proxy_boundary_allow.response.json  demo_proxy_mask_phone.response.json  demo_proxy_multi_step_warn.request.json  (+1 more)
evaluation/: __init__.py  evaluate.py  report_generator.py  sample_dataset.json
policies/: policy.yaml
reports/: baseline_evaluation_report.md  dataset_improvement_summary.md  dataset_stats.json  dataset_stats.md  detection_error_cases.md  detection_eval_report.json  detection_eval_report.md  evaluation_report.md
scripts/: build_dataset_v2.py  dataset_common.py  dataset_stats.py  demo_detection_cases.py  evaluate_detection.py  generate_demo_scenario_images.ps1  generate_evidence_images.ps1  run_demo.ps1  run_mock_llm.ps1  run_proxy.ps1  sync_benchmark_docs.ps1  validate_dataset.py
tools/: mock_llm.py  sync_benchmark_docs.py
(+11 files in other folders)
