[project]
name = "capstone-design-security-proxy"
version = "0.1.0"
description = "Rule-based LLM security proxy MVP for capstone design."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi>=0.110,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "PyYAML>=6.0,<7.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "evaluation*"]
exclude = ["backend.tests*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
